--- a/Oasis/css/styles.css
+++ b/Oasis/css/styles.css
@@ -11780,6 +11780,10 @@ section#contact form#contactForm :-ms-input-placeholder {
   padding: 0px 35px;
   border-radius: 50px;
   box-shadow: 0 0 15px 1px #b6bbc0;
+  outline: none;
+  color: var(--bs-yellow);
+  font-size: 24px;
+  font-weight: bold;
 
 }
 
